fixed price issue on iphone

--- a/Vintatge.Rabbit/Vintage.Rabbit.Web/Content/less/common/lightbox.less
+++ b/Vintatge.Rabbit/Vintage.Rabbit.Web/Content/less/common/lightbox.less
@@ -146,7 +146,6 @@
 		margin-right: 10px;
 		max-height: 98%;
 
-		padding: 10px 10px 0;
-		border-bottom: 10px solid transparent;
+		padding: 30px 10px 10px 10px;
 	}
 }
